// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands constraints check test (empty project / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ BR0000: Done
",
}
`;

exports[`Commands constraints check test (empty project / gen_enforced_dependency_range (extraneous)) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ BR0000: Done
",
}
`;

exports[`Commands constraints check test (empty project / gen_enforced_dependency_range (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0023: root-workspace-988eec must depend on no-deps (via 2.0.0) in dependencies, but doesn't
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (empty project / gen_enforced_dependency_range (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0023: root-workspace-988eec must depend on one-fixed-dep (via 1.0.0) in peerDependencies, but doesn't
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (empty project / gen_invalid_dependency (deep field path)) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ BR0000: Done
",
}
`;

exports[`Commands constraints check test (multiple workspaces / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ BR0000: Done
",
}
`;

exports[`Commands constraints check test (multiple workspaces / gen_enforced_dependency_range (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0025: workspace-a-01beb5 has an extraneous dependency on no-deps in dependencies
➤ BR0025: workspace-a-01beb5 has an extraneous dependency on no-deps in devDependencies
➤ BR0025: workspace-b-d95f30 has an extraneous dependency on no-deps in dependencies
➤ BR0025: workspace-b-d95f30 has an extraneous dependency on no-deps in devDependencies
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (multiple workspaces / gen_enforced_dependency_range (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0023: root-workspace-988eec must depend on no-deps (via 2.0.0) in dependencies, but doesn't
➤ BR0024: workspace-a-01beb5 must depend on no-deps via 2.0.0 in dependencies, but uses 1.0.0 instead
➤ BR0024: workspace-b-d95f30 must depend on no-deps via 2.0.0 in dependencies, but uses 1.0.0 instead
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (multiple workspaces / gen_enforced_dependency_range (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0023: root-workspace-988eec must depend on one-fixed-dep (via 1.0.0) in peerDependencies, but doesn't
➤ BR0023: workspace-a-01beb5 must depend on one-fixed-dep (via 1.0.0) in peerDependencies, but doesn't
➤ BR0023: workspace-b-d95f30 must depend on one-fixed-dep (via 1.0.0) in peerDependencies, but doesn't
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (multiple workspaces / gen_invalid_dependency (deep field path)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0026: workspace-a-01beb5 has an invalid dependency on no-deps in dependencies (invalid because no-deps is not allowed unless built is set to false)
➤ BR0026: workspace-a-01beb5 has an invalid dependency on no-deps in devDependencies (invalid because no-deps is not allowed unless built is set to false)
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (one regular dependency / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ BR0000: Done
",
}
`;

exports[`Commands constraints check test (one regular dependency / gen_enforced_dependency_range (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0025: root-workspace-988eec has an extraneous dependency on no-deps in dependencies
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (one regular dependency / gen_enforced_dependency_range (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0024: root-workspace-988eec must depend on no-deps via 2.0.0 in dependencies, but uses 1.0.0 instead
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (one regular dependency / gen_enforced_dependency_range (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0023: root-workspace-988eec must depend on one-fixed-dep (via 1.0.0) in peerDependencies, but doesn't
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (one regular dependency / gen_invalid_dependency (deep field path)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0026: root-workspace-988eec has an invalid dependency on no-deps in dependencies (invalid because no-deps is not allowed unless built is set to false)
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two development dependencies / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ BR0000: Done
",
}
`;

exports[`Commands constraints check test (two development dependencies / gen_enforced_dependency_range (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0025: root-workspace-988eec has an extraneous dependency on no-deps in devDependencies
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two development dependencies / gen_enforced_dependency_range (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0023: root-workspace-988eec must depend on no-deps (via 2.0.0) in dependencies, but doesn't
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two development dependencies / gen_enforced_dependency_range (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0023: root-workspace-988eec must depend on one-fixed-dep (via 1.0.0) in peerDependencies, but doesn't
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two development dependencies / gen_invalid_dependency (deep field path)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0026: root-workspace-988eec has an invalid dependency on no-deps in devDependencies (invalid because no-deps is not allowed unless built is set to false)
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two regular dependencies / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ BR0000: Done
",
}
`;

exports[`Commands constraints check test (two regular dependencies / gen_enforced_dependency_range (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0025: root-workspace-988eec has an extraneous dependency on no-deps in dependencies
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two regular dependencies / gen_enforced_dependency_range (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0024: root-workspace-988eec must depend on no-deps via 2.0.0 in dependencies, but uses 1.0.0 instead
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two regular dependencies / gen_enforced_dependency_range (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0023: root-workspace-988eec must depend on one-fixed-dep (via 1.0.0) in peerDependencies, but doesn't
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two regular dependencies / gen_invalid_dependency (deep field path)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0026: root-workspace-988eec has an invalid dependency on no-deps in dependencies (invalid because no-deps is not allowed unless built is set to false)
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two regular dependencies, two development dependencies / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ BR0000: Done
",
}
`;

exports[`Commands constraints check test (two regular dependencies, two development dependencies / gen_enforced_dependency_range (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0025: root-workspace-988eec has an extraneous dependency on no-deps in dependencies
➤ BR0025: root-workspace-988eec has an extraneous dependency on no-deps in devDependencies
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two regular dependencies, two development dependencies / gen_enforced_dependency_range (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0024: root-workspace-988eec must depend on no-deps via 2.0.0 in dependencies, but uses 1.0.0 instead
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two regular dependencies, two development dependencies / gen_enforced_dependency_range (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0023: root-workspace-988eec must depend on one-fixed-dep (via 1.0.0) in peerDependencies, but doesn't
➤ BR0000: Failed with errors
",
}
`;

exports[`Commands constraints check test (two regular dependencies, two development dependencies / gen_invalid_dependency (deep field path)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ BR0026: root-workspace-988eec has an invalid dependency on no-deps in dependencies (invalid because no-deps is not allowed unless built is set to false)
➤ BR0026: root-workspace-988eec has an invalid dependency on no-deps in devDependencies (invalid because no-deps is not allowed unless built is set to false)
➤ BR0000: Failed with errors
",
}
`;
